--- a/app.html
+++ b/app.html
@@ -7,6 +7,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>MoviesRestExample</title>
     <link rel="stylesheet" type="text/css" href="http://extjs.cachefly.net/touch/sencha-touch-2.0.1/resources/css/sencha-touch.css"/>
+    <link rel="stylesheet" type="text/css" href="Ext.ux.touch.Rating.css"/>
     <script type="text/javascript" src="http://extjs.cachefly.net/touch/sencha-touch-2.0.1/sencha-touch-all-debug.js"></script>
     <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript">
